--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: CheolJun Park
-email: fermioncji@gmail.com
+email: fermioncj@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  This is CheolJun Park's Webpage
+  PhD Student
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username:  unrloay2
+instagram_username: cheoljjjun
 
 # Build settings
 markdown: kramdown
