--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: CheolJun Park
 description: >
-  PhD Student
+  CheolJun Park
+    - KAIST EE PhD Student @SYSEC Lab
 #copyright: Untitled
 sass:
   sass_dir: assets/sass
