--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: '/'
 
 author:
   name: 'CheolJun Park'
-  email: josh@joshgerdes.com
+  email: fermioncj@kaist.ac.kr
   instagram_username : cheoljjjun
   github_username:  unrloay2
   facebook_username: cheoljun.park.1
