--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ author:
   facebook_username: joshgerdes
   github_username:  joshgerdes
   linkedin_username:  joshgerdes
-  instagram_username: cheoljjjun 
+#  instagram_username: cheoljjjun 
 
 defaults:
   -
