--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,19 @@
 # Site settings
 title: CheolJun Park
-description: 'Jekyll-Uno - a minimal, responsive theme for Jekyll'
+description: 'Ph.D Student @ KAIST EE'
 url: 'https://unrloay2.github.io'
 baseurl: '/'
 # google_analytics: 'UA-XXXXXX-X'
 # disqus_shortname: 'your-disqus-name'
 
 author:
-  name: 'Josh Gerdes'
-  email: josh@joshgerdes.com
-  twitter_username: joshgerdes
-  facebook_username: joshgerdes
-  github_username:  joshgerdes
-  linkedin_username:  joshgerdes
+  name: 'CheolJun Park'
+  email: fermioncj@kaist.ac.kr
+#  twitter_username: joshgerdes
+  facebook_username: cheoljun.park.1
+  github_username:  unrloay2
+#  linkedin_username:  joshgerdes
+  instagram_username: cheoljjjun
 
 defaults:
   -
